[package]
name = "pinball2d"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.6"
#bevy_rapier2d = "0.12.0" #Can't use versio 0.12.0, because of bug that give panic when despawn
bevy_rapier2d = { git = "https://github.com/dimforge/bevy_rapier" }
bevy_prototype_lyon = "0.4.0"