[package]
name = "pinball2d"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.11"
bevy_rapier2d = "0.22.0"
# bevy_rapier2d = { git = "https://github.com/dimforge/bevy_rapier", tag = "v0.12.1" }
bevy_prototype_lyon = "0.9.0"

[dev-dependencies]
bevy = "0.11"
bevy_rapier2d = "0.22.0"
# bevy_rapier2d = { git = "https://github.com/dimforge/bevy_rapier", tag = "v0.12.1" }
bevy_prototype_lyon = "0.9.0"

# [profile.release]
# opt-level = 'z'
# lto = "thin"

