[package]
name = "pinball2d"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.15"
bevy_rapier2d = "0.28"
bevy_prototype_lyon = "0.13"

[dev-dependencies]
bevy = "0.15"
bevy_rapier2d = "0.28"
bevy_prototype_lyon = "0.13"

# [profile.release]
# opt-level = 'z'
# lto = "thin"

